--- a/software/software.ioc
+++ b/software/software.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
@@ -10,9 +10,10 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=I2C1
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=TIM3
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
@@ -21,41 +22,58 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI2
 Mcu.IP8=SPI3
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH0 - OSC_IN
-Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PC8
-Mcu.Pin13=PC9
-Mcu.Pin14=PA9
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PC10
-Mcu.Pin2=PC2
-Mcu.Pin20=PC11
-Mcu.Pin21=PC12
-Mcu.Pin22=PD2
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
-Mcu.Pin3=PC3
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=31
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB12
+Mcu.Pin23=PB13
+Mcu.Pin24=PB14
+Mcu.Pin25=PB15
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
+Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PA9
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PD2
+Mcu.Pin39=PB3
+Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin40=PB4
+Mcu.Pin41=PB5
+Mcu.Pin42=PB6
+Mcu.Pin43=PB7
+Mcu.Pin44=PB9
+Mcu.Pin45=VP_RTC_VS_RTC_Activate
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -71,6 +89,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
 PA11.Mode=Device_Only
@@ -93,8 +112,20 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Signal=S_TIM3_CH3
+PB1.Signal=S_TIM3_CH4
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.Locked=true
+PB15.Signal=GPIO_Input
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
 PB4.Mode=Full_Duplex_Master
@@ -107,16 +138,32 @@ PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Input
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Output
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC6.Signal=S_TIM3_CH1
+PC7.Signal=S_TIM3_CH2
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
 PC9.Mode=SD_4_bits_Wide_bus
@@ -171,7 +218,8 @@ RCC.CortexFreq_Value=16000000
 RCC.HSE_VALUE=24000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=72000000
 RCC.PLLM=12
@@ -189,6 +237,14 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -204,6 +260,11 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -214,4 +275,6 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
