--- a/software/software.ioc
+++ b/software/software.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
@@ -30,40 +30,40 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA1
 Mcu.Pin11=PA2
 Mcu.Pin12=PA3
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PC4
-Mcu.Pin17=PC5
-Mcu.Pin18=PB0
-Mcu.Pin19=PB1
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB2
+Mcu.Pin20=PB1
 Mcu.Pin21=PB10
 Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC6
-Mcu.Pin27=PC7
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PC6
+Mcu.Pin26=PC7
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA9
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA9
-Mcu.Pin31=PA11
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PC10
-Mcu.Pin36=PC11
-Mcu.Pin37=PC12
-Mcu.Pin38=PD2
-Mcu.Pin39=PB3
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PC10
+Mcu.Pin35=PC11
+Mcu.Pin36=PC12
+Mcu.Pin37=PD2
+Mcu.Pin38=PB3
+Mcu.Pin39=PB4
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PB4
-Mcu.Pin41=PB5
-Mcu.Pin42=PB6
-Mcu.Pin43=PB7
+Mcu.Pin40=PB5
+Mcu.Pin41=PB6
+Mcu.Pin42=PB7
+Mcu.Pin43=PB8
 Mcu.Pin44=PB9
 Mcu.Pin45=VP_RTC_VS_RTC_Activate
 Mcu.Pin46=VP_SYS_VS_Systick
@@ -90,8 +90,9 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=ADCx_IN0
-PA1.Signal=ADCx_IN1
+PA0-WKUP.Signal=GPIO_Input
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -104,6 +105,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -118,14 +121,10 @@ PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB13.Locked=true
-PB13.Signal=GPIO_Output
 PB14.Locked=true
 PB14.Signal=GPIO_Input
 PB15.Locked=true
 PB15.Signal=GPIO_Input
-PB2.Locked=true
-PB2.Signal=GPIO_Output
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
 PB4.Mode=Full_Duplex_Master
@@ -136,12 +135,14 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.Locked=true
-PC0.Signal=GPIO_Output
+PC0.Signal=ADCx_IN10
 PC1.Locked=true
-PC1.Signal=GPIO_Input
+PC1.Signal=ADCx_IN11
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -233,10 +234,10 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=144000000
 RCC.VcooutputI2S=192000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN10.0=ADC1_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
